changes for gcp